# singularity-monitor

./: CONTRIBUTING.md  README.md  meson.build
data/: dev.sinty.monitor.desktop  dev.sinty.monitor.gschema.xml  dev.sinty.monitor.json
po/: POTFILES.in  meson.build
resources/: dev.sinty.monitor.gresource.xml
src/: app.vala  main.vala  models.vala  window.vala
ui/: main.vetro
widget/: dev.sinty.monitor.system-stats.widget  system_stats_widget.vala
